[lib]
name = "xpress"
path = "src/lib.rs"


[package]
name = "xpress"
version = "0.1.2"
edition = "2021"
description = "A minimal HTTP library."
license = "MIT" 
repository = "https://github.com/MikhailWahib/xpress"
keywords = ["express", "xpress", "http"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16.0"