[lib]
name = "xpress"
path = "src/lib.rs"


[package]
name = "xpress"
version = "0.1.3"
edition = "2021"
description = "A minimal HTTP library."
license = "MIT" 
authors = ["Mikhail Wahib <mikhailwahib20@gmail.com>"]
repository = "https://github.com/MikhailWahib/xpress"
keywords = ["express", "xpress", "http"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16.0"